--- a/enbseries.ini
+++ b/enbseries.ini
@@ -14,7 +14,7 @@ EnableProceduralSun=true
 EnableDistantShadow=true
 EnableDetailedShadow=true
 EnableNormalMappingShadows=true
-EnableCloudShadows=false
+EnableCloudShadows=true
 EnableImageBasedLighting=true
 EnableSkinSpecular=true
 EnableSubSurfaceScattering=true
@@ -43,9 +43,9 @@ EnableMultipleWeathers=true
 EnableLocationWeather=true
 [TIMEOFDAY]
 DawnDuration=1.42
-SunriseTime=7.0
-DayTime=13.0
-SunsetTime=17.25
+SunriseTime=8.0
+DayTime=13.5
+SunsetTime=19.0
 DuskDuration=2.8
 NightTime=1.0
 [ADAPTATION]
