--- a/enbseries/Weather/SkyrimClear.ini
+++ b/enbseries/Weather/SkyrimClear.ini
@@ -50,17 +50,17 @@ AuroraBorealisCurveNight=1.0
 AuroraBorealisCurveInteriorDay=1.0
 AuroraBorealisCurveInteriorNight=1.0
 GradientIntensityDawn=0.2
-GradientIntensitySunrise=2.1
-GradientIntensityDay=2.3
-GradientIntensitySunset=2.100001
+GradientIntensitySunrise=2.62
+GradientIntensityDay=2.8
+GradientIntensitySunset=2.620001
 GradientIntensityDusk=0.2
 GradientIntensityNight=0.200001
 GradientIntensityInteriorDay=1.0
 GradientIntensityInteriorNight=1.0
 GradientDesaturationDawn=0.25
-GradientDesaturationSunrise=0.1
-GradientDesaturationDay=0.1
-GradientDesaturationSunset=0.1
+GradientDesaturationSunrise=0.0
+GradientDesaturationDay=0.0
+GradientDesaturationSunset=0.0
 GradientDesaturationDusk=0.25
 GradientDesaturationNight=0.25
 GradientDesaturationInteriorDay=0.0
@@ -75,16 +75,16 @@ GradientTopIntensityInteriorDay=1.0
 GradientTopIntensityInteriorNight=1.0
 GradientTopCurveDawn=1.2
 GradientTopCurveSunrise=1.2
-GradientTopCurveDay=1.2
+GradientTopCurveDay=1.6
 GradientTopCurveSunset=1.2
 GradientTopCurveDusk=1.2
 GradientTopCurveNight=1.0
 GradientTopCurveInteriorDay=1.0
 GradientTopCurveInteriorNight=1.0
 GradientTopColorFilterDawn=1, 1, 1
-GradientTopColorFilterSunrise=0.051, 0.431, 0.765
-GradientTopColorFilterDay=0.051, 0.549, 0.765
-GradientTopColorFilterSunset=0.051, 0.431, 0.765
+GradientTopColorFilterSunrise=1, 1, 1
+GradientTopColorFilterDay=1, 1, 1
+GradientTopColorFilterSunset=1, 1, 1
 GradientTopColorFilterDusk=1, 1, 1
 GradientTopColorFilterNight=1, 1, 1
 GradientTopColorFilterInteriorDay=1, 1, 1
@@ -97,18 +97,18 @@ GradientMiddleIntensityDusk=1.0
 GradientMiddleIntensityNight=1.0
 GradientMiddleIntensityInteriorDay=1.0
 GradientMiddleIntensityInteriorNight=1.0
-GradientMiddleCurveDawn=1.2
-GradientMiddleCurveSunrise=1.2
-GradientMiddleCurveDay=1.2
-GradientMiddleCurveSunset=1.2
+GradientMiddleCurveDawn=1.4
+GradientMiddleCurveSunrise=1.4
+GradientMiddleCurveDay=1.4
+GradientMiddleCurveSunset=1.4
 GradientMiddleCurveDusk=1.2
 GradientMiddleCurveNight=1.0
 GradientMiddleCurveInteriorDay=1.0
 GradientMiddleCurveInteriorNight=1.0
 GradientMiddleColorFilterDawn=1, 1, 1
-GradientMiddleColorFilterSunrise=0.4, 0.686, 0.933
-GradientMiddleColorFilterDay=0.4, 0.773, 0.933
-GradientMiddleColorFilterSunset=0.4, 0.686, 0.933
+GradientMiddleColorFilterSunrise=1, 1, 1
+GradientMiddleColorFilterDay=1, 1, 1
+GradientMiddleColorFilterSunset=1, 1, 1
 GradientMiddleColorFilterDusk=1, 1, 1
 GradientMiddleColorFilterNight=1, 1, 1
 GradientMiddleColorFilterInteriorDay=1, 1, 1
@@ -123,7 +123,7 @@ GradientHorizonIntensityInteriorDay=1.0
 GradientHorizonIntensityInteriorNight=1.0
 GradientHorizonCurveDawn=1.2
 GradientHorizonCurveSunrise=1.2
-GradientHorizonCurveDay=1.2
+GradientHorizonCurveDay=1.6
 GradientHorizonCurveSunset=1.2
 GradientHorizonCurveDusk=1.2
 GradientHorizonCurveNight=1.2
@@ -131,16 +131,16 @@ GradientHorizonCurveInteriorDay=1.0
 GradientHorizonCurveInteriorNight=1.0
 GradientHorizonColorFilterDawn=1, 1, 1
 GradientHorizonColorFilterSunrise=1, 0.706, 0.51
-GradientHorizonColorFilterDay=0.792, 0.902, 0.949
+GradientHorizonColorFilterDay=1, 1, 1
 GradientHorizonColorFilterSunset=1, 0.706, 0.451
 GradientHorizonColorFilterDusk=1, 1, 1
 GradientHorizonColorFilterNight=1, 1, 1
 GradientHorizonColorFilterInteriorDay=1, 1, 1
 GradientHorizonColorFilterInteriorNight=1, 1, 1
 CloudsIntensityDawn=0.1
-CloudsIntensitySunrise=2.3
-CloudsIntensityDay=2.5
-CloudsIntensitySunset=2.3
+CloudsIntensitySunrise=2.62
+CloudsIntensityDay=2.8
+CloudsIntensitySunset=2.62
 CloudsIntensityDusk=0.1
 CloudsIntensityNight=0.1
 CloudsIntensityInteriorDay=1.0
@@ -235,9 +235,9 @@ MoonColorFilterInteriorDay=1, 1, 1
 MoonColorFilterInteriorNight=1, 1, 1
 [ENVIRONMENT]
 DirectLightingIntensityDawn=0.12
-DirectLightingIntensitySunrise=2.1
-DirectLightingIntensityDay=2.3
-DirectLightingIntensitySunset=2.1
+DirectLightingIntensitySunrise=2.62
+DirectLightingIntensityDay=2.8
+DirectLightingIntensitySunset=2.62
 DirectLightingIntensityDusk=0.12
 DirectLightingIntensityNight=0.12
 DirectLightingIntensityInteriorDay=1.0
@@ -251,9 +251,9 @@ DirectLightingCurveNight=1.0
 DirectLightingCurveInteriorDay=1.0
 DirectLightingCurveInteriorNight=1.0
 DirectLightingDesaturationDawn=0.0
-DirectLightingDesaturationSunrise=0.7
-DirectLightingDesaturationDay=-0.0
-DirectLightingDesaturationSunset=0.0
+DirectLightingDesaturationSunrise=0.33
+DirectLightingDesaturationDay=0.0
+DirectLightingDesaturationSunset=0.33
 DirectLightingDesaturationDusk=0.0
 DirectLightingDesaturationNight=0.0
 DirectLightingDesaturationInteriorDay=0.0
@@ -275,9 +275,9 @@ DirectLightingColorFilterNight=1, 0.667, 0.49
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
 AmbientLightingIntensityDawn=0.2
-AmbientLightingIntensitySunrise=0.34
+AmbientLightingIntensitySunrise=0.52
 AmbientLightingIntensityDay=0.83
-AmbientLightingIntensitySunset=0.34
+AmbientLightingIntensitySunset=0.52
 AmbientLightingIntensityDusk=0.18
 AmbientLightingIntensityNight=0.04
 AmbientLightingIntensityInteriorDay=1.0
@@ -597,18 +597,18 @@ CurveNight=1.0
 CurveInteriorDay=1.0
 CurveInteriorNight=1.0
 [VOLUMETRICFOG]
-IntensityDawn=0.1
-IntensitySunrise=0.78
+IntensityDawn=0.0
+IntensitySunrise=1.73
 IntensityDay=1.42
-IntensitySunset=1.36
+IntensitySunset=1.57
 IntensityDusk=0.1
 IntensityNight=0.04
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 CurveDawn=1.0
-CurveSunrise=1.47
-CurveDay=1.47
-CurveSunset=1.47
+CurveSunrise=1.99
+CurveDay=1.05
+CurveSunset=1.0
 CurveDusk=1.0
 CurveNight=1.0
 CurveInteriorDay=1.0
