Many small fixes

--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -52,10 +52,49 @@ AISS:  Max Tint Color=1.0
 AISS:  Tint Impact=1.0
 AISS:  Min Tint=0.0
 AISS:  Max Tint=0.0
-Debug:  Alternate Bloom Mixing=true
+Debug:  Alternate Bloom Mixing=false
 ««« Bloom »»»=0
-Bloom:  Bloom Spread Threshold=0.0
+Bloom:  Bloom Spread Threshold=0.05
 Bloom:  Bloom Spread Power=1.0
 Bloom:  Bloom Glow Threshold=0.0
-Bloom:  Bloom Glow Power=0.36
-Bloom:  Direct Bloom mix=0.0
+Bloom:  Bloom Glow Power=1.0
+Bloom:  Direct Bloom mix=0.05
+• Berxerk •=0
+««« Tonemap »»»=0
+Tonemap:  Exposure (Day)=0.1
+Tonemap:  Exposure (Night)=0.0
+Tonemap:  Exposure (Interior)=0.0
+Tonemap:  White Point (Day)=1.0
+Tonemap:  White Point (Night)=1.0
+Tonemap:  White Point (Interior)=1.0
+Tonemap:  Contrast (Day)=1.8
+Tonemap:  Contrast (Night)=1.6
+Tonemap:  Contrast (Interior)=1.6
+Tonemap:  Linear Section Start (Day)=0.22
+Tonemap:  Linear Section Start (Night)=0.22
+Tonemap:  Linear Section Start (Interior)=0.22
+Tonemap:  Linear Section End (Day)=0.44
+Tonemap:  Linear Section End (Night)=0.44
+Tonemap:  Linear Section End (Interior)=0.44
+Tonemap:  Black Point (Day)=1.33
+Tonemap:  Black Point (Night)=1.33
+Tonemap:  Black Point (Interior)=1.33
+Tonemap:  Black Pedestal (Day)=0.0
+Tonemap:  Black Pedestal (Night)=0.0
+Tonemap:  Black Pedestal (Interior)=0.0
+Tonemap:  RGB Gamma (Day)=0.494, 0.494, 0.494
+Tonemap:  RGB Gamma (Night)=0.494, 0.494, 0.494
+Tonemap:  RGB Gamma (Interior)=0.494, 0.494, 0.494
+Tonemap:  Color Temperature (Day)=7000.0
+Tonemap:  Color Temperature (Night)=7000.0
+Tonemap:  Color Temperature (Interior)=7000.0
+Tonemap:  Desaturation (Day)=0.0
+Tonemap:  Desaturation (Night)=0.0
+Tonemap:  Desaturation (Interior)=0.0
+Tonemap:  Resaturation (Day)=0.0
+Tonemap:  Resaturation (Night)=0.0
+Tonemap:  Resaturation (Interior)=0.0
+Tonemap:  Hue Shift (Day)=1.0
+Tonemap:  Hue Shift (Night)=1.0
+Tonemap:  Hue Shift (Interior)=1.0
+Tonemap:  Adaptation Impact=1.0
