--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -2,23 +2,23 @@
 TECHNIQUE=4
 ----- Masking -----=0
 Linear Input Slope=1.0
-Sensitivity=1.22
-Threshold=0.5
-Soft Threshold=0.2
-Mask out Sky=0.4
+Sensitivity=2.5
+Threshold=0.0
+Soft Threshold=0.7
+Mask out Sky=0.85
 =0
 ----- Color -----=0
-Intensity=-2.0
+Intensity=-3.75
 Saturation=1.0
 Tint=1, 1, 1
 Tonemap output=false
 ----- Shape -----=0
 Samples=8
-Sigma=1.5
+Sigma=1.0
 ----- Adaptation -----=0
-Enable Adaptation=true
+Enable Adaptation=false
 Adaptation Samples=8
-Adaptation Impact=8.0
+Adaptation Impact=2.0
 Min Adaptation=0.0
 Max Adaptation=1.0
 ----- Lens Dirt -----=0
