--- a/enbseries.ini
+++ b/enbseries.ini
@@ -1137,7 +1137,7 @@ CausticsAmount=1.0
 SunSpecularMultiplier=2.0
 SunScatteringMultiplier=0.75
 SunLightingMultiplier=0.3
-WetMultiplier=1.0
+WetMultiplier=0.65
 WavesAmplitudeDawn=0.5
 WavesAmplitudeSunrise=0.75
 WavesAmplitudeDay=1.0
@@ -1155,6 +1155,7 @@ BrightnessNight=1.0
 BrightnessInteriorDay=1.0
 BrightnessInteriorNight=1.0
 Muddiness=0.85
+ExpandHDR=false
 [UNDERWATER]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
