--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,20 +1,20 @@
 [ENBBLOOM.FX]
 TECHNIQUE=4
 ----- Masking -----=0
-Linear Input Slope=1.0
-Sensitivity=2.5
+Linear Input Slope=1.2
+Sensitivity=2.2
 Threshold=0.0
-Soft Threshold=0.7
-Mask out Sky=0.85
+Soft Threshold=1.0
+Mask out Sky=0.7
 =0
 ----- Color -----=0
-Intensity=-3.75
+Intensity=-3.5
 Saturation=1.0
 Tint=1, 1, 1
 Tonemap output=false
 ----- Shape -----=0
 Samples=8
-Sigma=1.0
+Sigma=1.3
 ----- Adaptation -----=0
 Enable Adaptation=false
 Adaptation Samples=8
@@ -22,8 +22,8 @@ Adaptation Impact=2.0
 Min Adaptation=0.0
 Max Adaptation=1.0
 ----- Lens Dirt -----=0
-Enable Lens Dirt=false
-Select Dirt Texture=0
-Dirt Intensity=0.5
+Enable Lens Dirt=true
+Select Dirt Texture=2
+Dirt Intensity=0.2
 Dirt Spread=1.0
 Dirt Tint=0.498, 0.498, 0.498
