--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1,8 +1,8 @@
 [ENBEFFECTPOSTPASS.FX]
 TECHNIQUE=1
 |----- Camera Effects -----=0
-| Enable Lens Distortion=true
-|  Distortion Amount=10
+| Enable Lens Distortion=false
+|  Distortion Amount=0
 =0
 | Enable Vingette=true
 |  Vingette Intesity=0.1
@@ -10,7 +10,7 @@ TECHNIQUE=1
 |  Grain Amount=30
 |  Grain Roughness=1
 | Enable Chromatic Aberration=true
-|  Aberration Strength=0.45
+|  Aberration Strength=0.6
 |  Aberration Curve=2.0
 | Enable Letterbox=true
 |  Horizontal Size=0.08
@@ -19,59 +19,59 @@ TECHNIQUE=1
 |  Letterbox Color=0, 0, 0
 |  Letterbox Distance=0.0
 | Enable Contrast Adaptive Sharpening=true
-|  Sharpening Contrast=0.3
+|  Sharpening Contrast=0.5
 |  Sharpening Amount=0.8
 |----- Color -----=0
 | Image Saturation:=0
-|  Vibrance=0.15
-|  RGB Vibrance=1, 1, 1
-|  Global Saturation=1.0
-|  Red Saturation=0.0
+|  Vibrance=0.5
+|  RGB Vibrance=1, 0.98, 0.941
+|  Global Saturation=0.8
+|  Red Saturation=0.1
 |  Yellow Saturation=0.0
-|  Green Saturation=0.0
-|  Aqua Saturation=0.0
+|  Green Saturation=-0.3
+|  Aqua Saturation=0.1
 |  Blue Saturation=0.0
 |  Purple Saturation=0.0
 |  Magenta Saturation=0.0
 | Image Luminance:=0
 |  Exposure=0.0
-|  Contrast=0.0
-|  Gamma=1.0
+|  Contrast=0.1
+|  Gamma=1.2
 |  Level Input Whitepoint=0.95
 |  Level Input Blackpoint=0.0
-|  Level Output Whitepoint=1.05
+|  Level Output Whitepoint=1.0
 |  Level Output Blackpoint=0.0
 | Curve Settings:=0
 |  Show Curve Graph=false
 |  Graph Box Size=512
 |  Chroma mode=true
-|  Shift Chroma range=0.1
+|  Shift Chroma range=1.0
 | Luminance Curve:=0
-|  Luma Curve Power=0.0
-|  Luma Curve Startpoint=0.0
-|  Luma Curve Lower End=0.35
-|  Luma Curve Upper End=0.65
-|  Luma Curve End Point=1.0
+|  Luma Curve Power=0.8
+|  Luma Curve Startpoint=-0.01
+|  Luma Curve Lower End=0.3
+|  Luma Curve Upper End=0.7
+|  Luma Curve End Point=1.1
 | Red Curve:=0
-|  Red Curve Power=0.0
+|  Red Curve Power=0.5
 |  Red Curve Startpoint=0.0
 |  Red Curve Lower End=0.35
-|  Red Curve Upper End=0.65
-|  Red Curve End Point=1.0
+|  Red Curve Upper End=0.7
+|  Red Curve End Point=1.01
 | Green Curve:=0
-|  Green Curve Power=0.0
+|  Green Curve Power=1.0
 |  Green Curve Startpoint=0.0
 |  Green Curve Lower End=0.35
-|  Green Curve Upper End=0.65
+|  Green Curve Upper End=0.75
 |  Green Curve End Point=1.0
 | Blue Curve:=0
-|  Blue Curve Power=0.0
-|  Blue Curve Startpoint=0.0
-|  Blue Curve Lower End=0.35
+|  Blue Curve Power=0.5
+|  Blue Curve Startpoint=0.05
+|  Blue Curve Lower End=0.4
 |  Blue Curve Upper End=0.65
-|  Blue Curve End Point=1.0
+|  Blue Curve End Point=0.99
 | Channel Isolation:=0
-|  Hue Selection=0.0
-|  Hue Range=0.1
+|  Hue Selection=0.175
+|  Hue Range=0.35
 |  Saturation Limit=1.0
-|  Mix Isolated Color=0.1
+|  Mix Isolated Color=0.2
