Update Tonemap. Minor adjustments

--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -8,7 +8,7 @@ Soft Threshold=1.0
 Mask out Sky=0.7
 =0
 ----- Color -----=0
-Intensity=-3.5
+Intensity=-4.2
 Saturation=1.0
 Tint=1, 1, 1
 Tonemap output=false
@@ -22,7 +22,7 @@ Adaptation Impact=2.0
 Min Adaptation=0.0
 Max Adaptation=1.0
 ----- Lens Dirt -----=0
-Enable Lens Dirt=true
+Enable Lens Dirt=false
 Select Dirt Texture=2
 Dirt Intensity=0.2
 Dirt Spread=1.0
