--- a/enbseries/enbdepthoffield.fx.ini
+++ b/enbseries/enbdepthoffield.fx.ini
@@ -2,12 +2,28 @@
 TECHNIQUE=1
 High Quality Mode=true
 Enable Auto Focus=true
-Manual Focus Distance=0.255
+Manual Focus Distance=0.31
 =0
 Aperture=2.2
-Bokeh Size=20.0
-Bokeh Intensity=100
-CA Amount=-0.2
+Bokeh Size=8.0
+Bokeh Intensity=80
+CA Amount=-0.8
 Optical Vignette=false
 Vingette Curve=0.75
 Vingette Amount=1.0
+DoF: Chromatic Aberration=8.0
+DoF: Focus Bias=0.045
+DoF: DoF Cutoff=0.2
+DoF: DoF Bias=0.07
+DoF: Blur Scale=0.0034
+DoF: Blur Cutoff=0.15
+DoF: Close Dof Distance=0.05
+Bokeh: Bokeh Curve=4.0
+Bokeh: Bokeh Intensity=0.95
+Bokeh: Bokeh Constant=0.1
+Bokeh: Bokeh Min=0.001
+Bokeh: Bokeh Max=1.925
+Bokeh: Bokeh Max Level=45.0
+Bokeh: Bokeh Max Weight=25.0
+Grain: Grain Frequency=1000.0
+Grain: Grain Scale=0.0015
