--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1,13 +1,13 @@
 [ENBEFFECTPOSTPASS.FX]
 TECHNIQUE=1
 |----- Camera Effects -----=0
-| Enable Lens Distortion=false
-|  Distortion Amount=0
+| Enable Lens Distortion=true
+|  Distortion Amount=-15
 =0
 | Enable Vingette=true
-|  Vingette Intesity=0.1
+|  Vingette Intesity=0.08
 | Enable Grain=true
-|  Grain Amount=30
+|  Grain Amount=40
 |  Grain Roughness=1
 | Enable Chromatic Aberration=true
 |  Aberration Strength=0.6
@@ -19,28 +19,28 @@ TECHNIQUE=1
 |  Letterbox Color=0, 0, 0
 |  Letterbox Distance=0.0
 | Enable Contrast Adaptive Sharpening=true
-|  Sharpening Contrast=0.5
+|  Sharpening Contrast=0.6
 |  Sharpening Amount=0.8
 |----- Color -----=0
 | Image Saturation:=0
-|  Vibrance=0.5
+|  Vibrance=0.25
 |  RGB Vibrance=1, 0.98, 0.941
-|  Global Saturation=0.8
-|  Red Saturation=0.1
-|  Yellow Saturation=0.0
-|  Green Saturation=-0.3
-|  Aqua Saturation=0.1
-|  Blue Saturation=0.0
+|  Global Saturation=0.95
+|  Red Saturation=0.05
+|  Yellow Saturation=-0.05
+|  Green Saturation=-0.1
+|  Aqua Saturation=0.05
+|  Blue Saturation=0.05
 |  Purple Saturation=0.0
 |  Magenta Saturation=0.0
 | Image Luminance:=0
-|  Exposure=0.0
-|  Contrast=0.1
-|  Gamma=1.2
+|  Exposure=-0.0
+|  Contrast=0.15
+|  Gamma=1.1
 |  Level Input Whitepoint=0.95
 |  Level Input Blackpoint=0.0
 |  Level Output Whitepoint=1.0
-|  Level Output Blackpoint=0.0
+|  Level Output Blackpoint=0.01
 | Curve Settings:=0
 |  Show Curve Graph=false
 |  Graph Box Size=512
@@ -56,8 +56,8 @@ TECHNIQUE=1
 |  Red Curve Power=0.5
 |  Red Curve Startpoint=0.0
 |  Red Curve Lower End=0.35
-|  Red Curve Upper End=0.7
-|  Red Curve End Point=1.01
+|  Red Curve Upper End=0.65
+|  Red Curve End Point=1.0
 | Green Curve:=0
 |  Green Curve Power=1.0
 |  Green Curve Startpoint=0.0
@@ -65,13 +65,13 @@ TECHNIQUE=1
 |  Green Curve Upper End=0.75
 |  Green Curve End Point=1.0
 | Blue Curve:=0
-|  Blue Curve Power=0.5
+|  Blue Curve Power=0.7
 |  Blue Curve Startpoint=0.05
-|  Blue Curve Lower End=0.4
-|  Blue Curve Upper End=0.65
+|  Blue Curve Lower End=0.45
+|  Blue Curve Upper End=0.6
 |  Blue Curve End Point=0.99
 | Channel Isolation:=0
 |  Hue Selection=0.175
 |  Hue Range=0.35
-|  Saturation Limit=1.0
+|  Saturation Limit=0.85
 |  Mix Isolated Color=0.2
