--- a/enbseries/W/overcast_rain.ini
+++ b/enbseries/W/overcast_rain.ini
@@ -4,7 +4,7 @@ AmountSunrise=0.2
 AmountDay=0.22
 AmountSunset=0.2
 AmountDusk=0.25
-AmountNight=0.35
+AmountNight=3.0
 AmountInteriorDay=0.15
 AmountInteriorNight=0.3
 [LENS]
@@ -22,7 +22,7 @@ StarsIntensitySunrise=1.0
 StarsIntensityDay=1.0
 StarsIntensitySunset=1.0
 StarsIntensityDusk=1.0
-StarsIntensityNight=1.0
+StarsIntensityNight=0.12
 StarsIntensityInteriorDay=1.0
 StarsIntensityInteriorNight=1.0
 StarsCurveDawn=1.0
@@ -54,7 +54,7 @@ GradientIntensitySunrise=1.8
 GradientIntensityDay=2.0
 GradientIntensitySunset=1.8
 GradientIntensityDusk=1.15
-GradientIntensityNight=0.55
+GradientIntensityNight=0.120001
 GradientIntensityInteriorDay=2.2
 GradientIntensityInteriorNight=0.1
 GradientDesaturationDawn=0.3
@@ -78,7 +78,7 @@ GradientTopCurveSunrise=1.0
 GradientTopCurveDay=1.3
 GradientTopCurveSunset=1.0
 GradientTopCurveDusk=1.15
-GradientTopCurveNight=1.3
+GradientTopCurveNight=1.6
 GradientTopCurveInteriorDay=1.0
 GradientTopCurveInteriorNight=1.0
 GradientTopColorFilterDawn=1, 1, 1
@@ -102,7 +102,7 @@ GradientMiddleCurveSunrise=0.85
 GradientMiddleCurveDay=1.25
 GradientMiddleCurveSunset=0.85
 GradientMiddleCurveDusk=1.0
-GradientMiddleCurveNight=1.15
+GradientMiddleCurveNight=1.6
 GradientMiddleCurveInteriorDay=1.0
 GradientMiddleCurveInteriorNight=1.0
 GradientMiddleColorFilterDawn=1, 1, 1
@@ -126,7 +126,7 @@ GradientHorizonCurveSunrise=1.2
 GradientHorizonCurveDay=1.0
 GradientHorizonCurveSunset=1.2
 GradientHorizonCurveDusk=1.17
-GradientHorizonCurveNight=1.1
+GradientHorizonCurveNight=1.6
 GradientHorizonCurveInteriorDay=1.0
 GradientHorizonCurveInteriorNight=1.0
 GradientHorizonColorFilterDawn=1, 1, 1
@@ -142,7 +142,7 @@ CloudsIntensitySunrise=1.55
 CloudsIntensityDay=2.25
 CloudsIntensitySunset=1.55
 CloudsIntensityDusk=1.0
-CloudsIntensityNight=0.4
+CloudsIntensityNight=0.120001
 CloudsIntensityInteriorDay=2.7
 CloudsIntensityInteriorNight=0.1
 CloudsCurveDawn=1.4
@@ -279,7 +279,7 @@ AmbientLightingIntensitySunrise=3.0
 AmbientLightingIntensityDay=3.0
 AmbientLightingIntensitySunset=3.0
 AmbientLightingIntensityDusk=1.6
-AmbientLightingIntensityNight=0.25
+AmbientLightingIntensityNight=0.22
 AmbientLightingIntensityInteriorDay=0.4
 AmbientLightingIntensityInteriorNight=0.2
 AmbientLightingDesaturationDawn=0.0
@@ -295,7 +295,7 @@ PointLightingIntensitySunrise=1.0
 PointLightingIntensityDay=1.85
 PointLightingIntensitySunset=1.0
 PointLightingIntensityDusk=0.9
-PointLightingIntensityNight=0.6
+PointLightingIntensityNight=3.2
 PointLightingIntensityInteriorDay=0.3
 PointLightingIntensityInteriorNight=0.35
 PointLightingCurveDawn=1.0
@@ -303,7 +303,7 @@ PointLightingCurveSunrise=1.0
 PointLightingCurveDay=0.7
 PointLightingCurveSunset=1.0
 PointLightingCurveDusk=1.0
-PointLightingCurveNight=1.0
+PointLightingCurveNight=0.86
 PointLightingCurveInteriorDay=0.85
 PointLightingCurveInteriorNight=0.85
 PointLightingDesaturationDawn=0.25
@@ -375,7 +375,7 @@ FogColorFilterSunrise=1, 1, 1
 FogColorFilterDay=0.886, 0.871, 0.839
 FogColorFilterSunset=1, 1, 1
 FogColorFilterDusk=1, 1, 1
-FogColorFilterNight=1, 1, 1
+FogColorFilterNight=0, 0, 0
 FogColorFilterInteriorDay=1, 1, 1
 FogColorFilterInteriorNight=1, 1, 1
 ColorPowDawn=1.55
@@ -386,6 +386,30 @@ ColorPowDusk=1.55
 ColorPowNight=1.5
 ColorPowInteriorDay=1.0
 ColorPowInteriorNight=1.0
+SpecularFromLightDawn=0.0
+SpecularFromLightSunrise=0.0
+SpecularFromLightDay=0.0
+SpecularFromLightSunset=0.0
+SpecularFromLightDusk=0.0
+SpecularFromLightNight=0.0
+SpecularFromLightInteriorDay=0.0
+SpecularFromLightInteriorNight=0.0
+CubemapAmountMultiplierDawn=1.0
+CubemapAmountMultiplierSunrise=1.0
+CubemapAmountMultiplierDay=1.0
+CubemapAmountMultiplierSunset=1.0
+CubemapAmountMultiplierDusk=1.0
+CubemapAmountMultiplierNight=1.0
+CubemapAmountMultiplierInteriorDay=1.0
+CubemapAmountMultiplierInteriorNight=1.0
+CubemapCurveDawn=1.0
+CubemapCurveSunrise=1.0
+CubemapCurveDay=1.0
+CubemapCurveSunset=1.0
+CubemapCurveDusk=1.0
+CubemapCurveNight=1.0
+CubemapCurveInteriorDay=1.0
+CubemapCurveInteriorNight=1.0
 [SKYLIGHTING]
 AmbientMinLevelDawn=0.52
 AmbientMinLevelSunrise=0.4
@@ -553,6 +577,14 @@ FakeLightDusk=0.0
 FakeLightNight=0.0
 FakeLightInteriorDay=0.0
 FakeLightInteriorNight=0.0
+SpecularPowerMultiplierDawn=1.0
+SpecularPowerMultiplierSunrise=1.0
+SpecularPowerMultiplierDay=1.0
+SpecularPowerMultiplierSunset=1.0
+SpecularPowerMultiplierDusk=1.0
+SpecularPowerMultiplierNight=1.0
+SpecularPowerMultiplierInteriorDay=1.0
+SpecularPowerMultiplierInteriorNight=1.0
 [SKINSPECULAR]
 SpecularAmountDawn=1.0
 SpecularAmountSunrise=1.0
@@ -602,7 +634,7 @@ IntensitySunrise=2.6
 IntensityDay=2.5
 IntensitySunset=2.6
 IntensityDusk=1.58
-IntensityNight=0.57
+IntensityNight=0.12
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 CurveDawn=1.0
@@ -845,6 +877,54 @@ BodyReflectionAmountDusk=0.3
 BodyReflectionAmountNight=0.3
 BodyReflectionAmountInteriorDay=0.3
 BodyReflectionAmountInteriorNight=0.3
+SpecularMapMinDawn=0.0
+SpecularMapMinSunrise=0.0
+SpecularMapMinDay=0.0
+SpecularMapMinSunset=0.0
+SpecularMapMinDusk=0.0
+SpecularMapMinNight=0.0
+SpecularMapMinInteriorDay=0.0
+SpecularMapMinInteriorNight=0.0
+SpecularMapAmountDawn=0.0
+SpecularMapAmountSunrise=0.0
+SpecularMapAmountDay=0.0
+SpecularMapAmountSunset=0.0
+SpecularMapAmountDusk=0.0
+SpecularMapAmountNight=0.0
+SpecularMapAmountInteriorDay=0.0
+SpecularMapAmountInteriorNight=0.0
+SpecularMapToGlossinessDawn=0.0
+SpecularMapToGlossinessSunrise=0.0
+SpecularMapToGlossinessDay=0.0
+SpecularMapToGlossinessSunset=0.0
+SpecularMapToGlossinessDusk=0.0
+SpecularMapToGlossinessNight=0.0
+SpecularMapToGlossinessInteriorDay=0.0
+SpecularMapToGlossinessInteriorNight=0.0
+BodySpecularMapMinDawn=0.0
+BodySpecularMapMinSunrise=0.0
+BodySpecularMapMinDay=0.0
+BodySpecularMapMinSunset=0.0
+BodySpecularMapMinDusk=0.0
+BodySpecularMapMinNight=0.0
+BodySpecularMapMinInteriorDay=0.0
+BodySpecularMapMinInteriorNight=0.0
+BodySpecularMapAmountDawn=0.0
+BodySpecularMapAmountSunrise=0.0
+BodySpecularMapAmountDay=0.0
+BodySpecularMapAmountSunset=0.0
+BodySpecularMapAmountDusk=0.0
+BodySpecularMapAmountNight=0.0
+BodySpecularMapAmountInteriorDay=0.0
+BodySpecularMapAmountInteriorNight=0.0
+BodySpecularMapToGlossinessDawn=0.0
+BodySpecularMapToGlossinessSunrise=0.0
+BodySpecularMapToGlossinessDay=0.0
+BodySpecularMapToGlossinessSunset=0.0
+BodySpecularMapToGlossinessDusk=0.0
+BodySpecularMapToGlossinessNight=0.0
+BodySpecularMapToGlossinessInteriorDay=0.0
+BodySpecularMapToGlossinessInteriorNight=0.0
 [WETSURFACES]
 GlossinessDawn=1.0
 GlossinessSunrise=1.0
@@ -878,6 +958,54 @@ BodyReflectionAmountDusk=0.0
 BodyReflectionAmountNight=0.0
 BodyReflectionAmountInteriorDay=0.0
 BodyReflectionAmountInteriorNight=0.0
+SpecularMapMinDawn=0.0
+SpecularMapMinSunrise=0.0
+SpecularMapMinDay=0.0
+SpecularMapMinSunset=0.0
+SpecularMapMinDusk=0.0
+SpecularMapMinNight=0.0
+SpecularMapMinInteriorDay=0.0
+SpecularMapMinInteriorNight=0.0
+SpecularMapAmountDawn=0.0
+SpecularMapAmountSunrise=0.0
+SpecularMapAmountDay=0.0
+SpecularMapAmountSunset=0.0
+SpecularMapAmountDusk=0.0
+SpecularMapAmountNight=0.0
+SpecularMapAmountInteriorDay=0.0
+SpecularMapAmountInteriorNight=0.0
+SpecularMapToGlossinessDawn=0.0
+SpecularMapToGlossinessSunrise=0.0
+SpecularMapToGlossinessDay=0.0
+SpecularMapToGlossinessSunset=0.0
+SpecularMapToGlossinessDusk=0.0
+SpecularMapToGlossinessNight=0.0
+SpecularMapToGlossinessInteriorDay=0.0
+SpecularMapToGlossinessInteriorNight=0.0
+BodySpecularMapMinDawn=0.0
+BodySpecularMapMinSunrise=0.0
+BodySpecularMapMinDay=0.0
+BodySpecularMapMinSunset=0.0
+BodySpecularMapMinDusk=0.0
+BodySpecularMapMinNight=0.0
+BodySpecularMapMinInteriorDay=0.0
+BodySpecularMapMinInteriorNight=0.0
+BodySpecularMapAmountDawn=0.0
+BodySpecularMapAmountSunrise=0.0
+BodySpecularMapAmountDay=0.0
+BodySpecularMapAmountSunset=0.0
+BodySpecularMapAmountDusk=0.0
+BodySpecularMapAmountNight=0.0
+BodySpecularMapAmountInteriorDay=0.0
+BodySpecularMapAmountInteriorNight=0.0
+BodySpecularMapToGlossinessDawn=0.0
+BodySpecularMapToGlossinessSunrise=0.0
+BodySpecularMapToGlossinessDay=0.0
+BodySpecularMapToGlossinessSunset=0.0
+BodySpecularMapToGlossinessDusk=0.0
+BodySpecularMapToGlossinessNight=0.0
+BodySpecularMapToGlossinessInteriorDay=0.0
+BodySpecularMapToGlossinessInteriorNight=0.0
 [WATER]
 WavesAmplitudeDawn=1.0
 WavesAmplitudeSunrise=1.0
