New Bloom. Fixed WB shader

--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,5 +1,5 @@
 [ENBBLOOM.FX]
-TECHNIQUE=4
+TECHNIQUE=1
 ----- Masking -----=0
 Linear Input Slope=1.2
 Sensitivity=2.2
@@ -27,3 +27,18 @@ Select Dirt Texture=2
 Dirt Intensity=0.2
 Dirt Spread=1.0
 Dirt Tint=0.498, 0.498, 0.498
+|--- Mundus Natural Bloom ----------------------------------=0
+| High Quality=false
+| Intensity (Day)=1.0
+| Intensity (Night)=1.0
+| Intensity (Interior)=1.0
+| Sensitivity (Day)=1.5
+| Sensitivity (Night)=1.0
+| Sensitivity (Interior)=1.5
+| Saturation (Day)=1.0
+| Saturation (Night)=1.0
+| Saturation (Interior)=1.0
+| Bloom Size (Day)=0.1
+| Bloom Size (Night)=0.1
+| Bloom Size (Interior)=0.1
+| Mask out Sky=0.2
