--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -98,3 +98,15 @@ Tonemap:  Hue Shift (Day)=1.0
 Tonemap:  Hue Shift (Night)=1.0
 Tonemap:  Hue Shift (Interior)=1.0
 Tonemap:  Adaptation Impact=1.0
+Bloom:  Intensity (Day)=0.5
+Bloom:  Intensity (Night)=0.5
+Bloom:  Intensity (Interior)=0.5
+Bloom:  Dampening (Day)=0.5
+Bloom:  Dampening (Night)=0.5
+Bloom:  Dampening (Interior)=0.5
+Bloom:  Soft Bloom Intensity (Day)=1.0
+Bloom:  Soft Bloom Intensity (Night)=1.0
+Bloom:  Soft Bloom Intensity (Interior)=1.0
+Bloom:  Soft Bloom Mixing (Day)=0.1
+Bloom:  Soft Bloom Mixing (Night)=0.1
+Bloom:  Soft Bloom Mixing (Interior)=0.1
