--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -29,16 +29,17 @@ Dirt Spread=1.0
 Dirt Tint=0.498, 0.498, 0.498
 |--- Mundus Natural Bloom ----------------------------------=0
 | High Quality=false
-| Intensity (Day)=1.0
+| Intensity (Day)=0.73
 | Intensity (Night)=1.0
 | Intensity (Interior)=1.0
-| Sensitivity (Day)=1.5
+| Sensitivity (Day)=2.28
 | Sensitivity (Night)=1.0
 | Sensitivity (Interior)=1.5
-| Saturation (Day)=1.0
-| Saturation (Night)=1.0
+| Saturation (Day)=0.75
+| Saturation (Night)=1.45
 | Saturation (Interior)=1.0
-| Bloom Size (Day)=0.1
-| Bloom Size (Night)=0.1
+| Bloom Size (Day)=0.4
+| Bloom Size (Night)=1.0
 | Bloom Size (Interior)=0.1
 | Mask out Sky=0.2
+|--- Nordwind Natural Bloom ---=0
