wasnt happy with my grade

--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -28,9 +28,9 @@ TECHNIQUE=1
 |  Global Saturation=0.95
 |  Red Saturation=0.05
 |  Yellow Saturation=-0.05
-|  Green Saturation=-0.36
+|  Green Saturation=-0.1
 |  Aqua Saturation=0.05
-|  Blue Saturation=0.27
+|  Blue Saturation=0.05
 |  Purple Saturation=0.0
 |  Magenta Saturation=0.0
 | Image Luminance:=0
@@ -44,31 +44,31 @@ TECHNIQUE=1
 | Curve Settings:=0
 |  Show Curve Graph=false
 |  Graph Box Size=512
-|  Chroma mode=false
+|  Chroma mode=true
 |  Shift Chroma range=1.0
 | Luminance Curve:=0
 |  Luma Curve Power=0.8
 |  Luma Curve Startpoint=-0.01
-|  Luma Curve Lower End=0.2
-|  Luma Curve Upper End=0.86
+|  Luma Curve Lower End=0.3
+|  Luma Curve Upper End=0.7
 |  Luma Curve End Point=1.1
 | Red Curve:=0
 |  Red Curve Power=0.5
 |  Red Curve Startpoint=0.0
-|  Red Curve Lower End=0.34
-|  Red Curve Upper End=0.66
+|  Red Curve Lower End=0.35
+|  Red Curve Upper End=0.65
 |  Red Curve End Point=1.0
 | Green Curve:=0
 |  Green Curve Power=1.0
 |  Green Curve Startpoint=0.0
 |  Green Curve Lower End=0.35
-|  Green Curve Upper End=0.7
+|  Green Curve Upper End=0.75
 |  Green Curve End Point=1.0
 | Blue Curve:=0
 |  Blue Curve Power=0.7
 |  Blue Curve Startpoint=0.05
-|  Blue Curve Lower End=0.28
-|  Blue Curve Upper End=0.86
+|  Blue Curve Lower End=0.45
+|  Blue Curve Upper End=0.6
 |  Blue Curve End Point=0.99
 | Channel Isolation:=0
 |  Hue Selection=0.175
