--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1,77 +1,77 @@
 [ENBEFFECTPOSTPASS.FX]
 TECHNIQUE=1
 |----- Camera Effects -----=0
-| Enable Lens Distortion=true
-|  Distortion Amount=-15
+| Enable Lens Distortion=false
+|  Distortion Amount=0
 =0
 | Enable Vingette=true
-|  Vingette Intesity=0.08
+|  Vingette Intesity=0.1
 | Enable Grain=true
-|  Grain Amount=40
+|  Grain Amount=60
 |  Grain Roughness=1
 | Enable Chromatic Aberration=true
-|  Aberration Strength=0.6
-|  Aberration Curve=2.0
+|  Aberration Strength=1.0
+|  Aberration Curve=1.6
 | Enable Letterbox=true
-|  Horizontal Size=0.08
+|  Horizontal Size=0.1
 |  Vertical Size=0.0
 |  Letterbox Rotation=0.0
 |  Letterbox Color=0, 0, 0
 |  Letterbox Distance=0.0
 | Enable Contrast Adaptive Sharpening=true
-|  Sharpening Contrast=0.6
-|  Sharpening Amount=0.8
+|  Sharpening Contrast=0.4
+|  Sharpening Amount=0.6
 |----- Color -----=0
 | Image Saturation:=0
-|  Vibrance=0.1
-|  RGB Vibrance=1, 0.98, 0.941
-|  Global Saturation=0.95
-|  Red Saturation=0.05
-|  Yellow Saturation=-0.05
-|  Green Saturation=-0.1
-|  Aqua Saturation=0.05
-|  Blue Saturation=0.05
+|  Vibrance=0.3
+|  RGB Vibrance=1, 1, 1
+|  Global Saturation=0.8
+|  Red Saturation=0.0
+|  Yellow Saturation=0.05
+|  Green Saturation=-0.15
+|  Aqua Saturation=0.2
+|  Blue Saturation=-0.1
 |  Purple Saturation=0.0
 |  Magenta Saturation=0.0
 | Image Luminance:=0
-|  Exposure=-0.0
+|  Exposure=0.0
 |  Contrast=0.15
 |  Gamma=1.1
 |  Level Input Whitepoint=0.95
 |  Level Input Blackpoint=0.0
 |  Level Output Whitepoint=1.1
-|  Level Output Blackpoint=0.01
+|  Level Output Blackpoint=0.0
 | Curve Settings:=0
 |  Show Curve Graph=false
 |  Graph Box Size=512
-|  Chroma mode=true
-|  Shift Chroma range=1.0
+|  Chroma mode=false
+|  Shift Chroma range=0.1
 | Luminance Curve:=0
-|  Luma Curve Power=0.8
-|  Luma Curve Startpoint=-0.01
-|  Luma Curve Lower End=0.3
-|  Luma Curve Upper End=0.7
+|  Luma Curve Power=0.5
+|  Luma Curve Startpoint=-0.06
+|  Luma Curve Lower End=0.24
+|  Luma Curve Upper End=0.92
 |  Luma Curve End Point=1.1
 | Red Curve:=0
-|  Red Curve Power=0.5
-|  Red Curve Startpoint=0.0
-|  Red Curve Lower End=0.35
-|  Red Curve Upper End=0.65
+|  Red Curve Power=0.3
+|  Red Curve Startpoint=0.05
+|  Red Curve Lower End=0.24
+|  Red Curve Upper End=0.51
 |  Red Curve End Point=1.0
 | Green Curve:=0
-|  Green Curve Power=1.0
+|  Green Curve Power=0.3
 |  Green Curve Startpoint=0.0
-|  Green Curve Lower End=0.35
-|  Green Curve Upper End=0.75
+|  Green Curve Lower End=0.31
+|  Green Curve Upper End=0.7
 |  Green Curve End Point=1.0
 | Blue Curve:=0
-|  Blue Curve Power=0.7
-|  Blue Curve Startpoint=0.05
-|  Blue Curve Lower End=0.45
-|  Blue Curve Upper End=0.6
-|  Blue Curve End Point=0.99
+|  Blue Curve Power=0.3
+|  Blue Curve Startpoint=0.0
+|  Blue Curve Lower End=0.3
+|  Blue Curve Upper End=0.75
+|  Blue Curve End Point=1.0
 | Channel Isolation:=0
-|  Hue Selection=0.175
-|  Hue Range=0.35
-|  Saturation Limit=0.85
+|  Hue Selection=0.165
+|  Hue Range=0.2
+|  Saturation Limit=1.0
 |  Mix Isolated Color=0.2
