--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -29,17 +29,20 @@ Dirt Spread=1.0
 Dirt Tint=0.498, 0.498, 0.498
 |--- Mundus Natural Bloom ----------------------------------=0
 | High Quality=false
-| Intensity (Day)=0.76
-| Intensity (Night)=1.0
-| Intensity (Interior)=0.45
-| Sensitivity (Day)=1.42
-| Sensitivity (Night)=1.13
-| Sensitivity (Interior)=1.1
+| Intensity (Day)=1.0
+| Intensity (Night)=1.5
+| Intensity (Interior)=0.25
+| Sensitivity (Day)=1.0
+| Sensitivity (Night)=1.0
+| Sensitivity (Interior)=1.0
 | Saturation (Day)=1.0
-| Saturation (Night)=1.07
+| Saturation (Night)=1.1
 | Saturation (Interior)=1.0
-| Bloom Size (Day)=0.4
-| Bloom Size (Night)=0.4
+| Bloom Size (Day)=0.6
+| Bloom Size (Night)=0.3
 | Bloom Size (Interior)=0.1
 | Mask out Sky=0.2
 |--- Nordwind Natural Bloom ---=0
+| Threshhold (Day)=0.24
+| Threshhold (Night)=0.07
+| Threshhold (Interior)=0.1
