--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1,8 +1,8 @@
 [ENBEFFECTPOSTPASS.FX]
 TECHNIQUE=1
 |----- Camera Effects -----=0
-| Enable Lens Distortion=false
-|  Distortion Amount=0
+| Enable Lens Distortion=true
+|  Distortion Amount=-10
 =0
 | Enable Vingette=true
 |  Vingette Intesity=0.1
