--- a/enbseries.ini
+++ b/enbseries.ini
@@ -32,7 +32,7 @@ EnableRainWetSurfaces=true
 EnableReflection=true
 EnableComplexGrass=true
 EnableComplexGrassCollisions=true
-EnableTerrainParallax=true
+EnableTerrainParallax=false
 EnableComplexParallax=false
 EnableComplexParallaxShadows=true
 EnableComplexTerrainParallax=false
@@ -1212,32 +1212,32 @@ BodySpecularMapToGlossinessInteriorDay=0.0
 BodySpecularMapToGlossinessInteriorNight=0.0
 [SUBSURFACESCATTERING]
 IgnoreWeatherSystem=true
-IgnoreWeatherSystemInterior=true
-EnableSeparateInteriorParameters=false
-EnableOldSSS=false
 Quality=0
-Radius=2.0
-RadiusInterior=4.22
-Amount=0.9
-AmountInterior=0.9
-EpidermalAmount=3.0
-EpidermalAmountInterior=1.0
-SubdermalAmount=3.0
-SubdermalAmountInterior=1.0
-EpidermalDiffuseSaturation=-0.65
-EpidermalDiffuseSaturationInterior=-0.65
-SubdermalDiffuseSaturation=0.4
-SubdermalDiffuseSaturationInterior=0.85
-EpidermalMix=0.4
-EpidermalMixInterior=0.3
-SubdermalMix=0.5
+Radius=7.0
+Amount=0.4
+EpidermalAmount=3.3
+SubdermalAmount=7.0
+EpidermalDiffuseSaturation=0.0
+SubdermalDiffuseSaturation=0.5
+EpidermalMix=0.35
+SubdermalMix=0.25
+SubdermalTranslucency=0.25
+SubdermalPhase=0.25
+EnableSeparateInteriorParameters=true
+RadiusInterior=5.0
+AmountInterior=0.55
+EpidermalAmountInterior=2.0
+SubdermalAmountInterior=5.0
+EpidermalDiffuseSaturationInterior=0.15
+SubdermalDiffuseSaturationInterior=0.45
+EpidermalMixInterior=0.25
 SubdermalMixInterior=0.3
-SubdermalTranslucency=0.28
 SubdermalTranslucencyInterior=0.3
-SubdermalPhase=0.15
-SubdermalPhaseInterior=0.0
-SurfaceBrightness=1.0
-SurfaceBrightnessInterior=1.0
+SubdermalPhaseInterior=0.45
+SurfaceBrightness=1.15
+SurfaceBrightnessInterior=0.8
+EnableOldSSS=true
+IgnoreWeatherSystemInterior=false
 [REFLECTION]
 EnableInterior=true
 Quality=0
