--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -28,7 +28,7 @@ Dirt Intensity=0.2
 Dirt Spread=1.0
 Dirt Tint=0.498, 0.498, 0.498
 |--- Mundus Natural Bloom ----------------------------------=0
-| High Quality=false
+| High Quality=true
 | Intensity (Day)=1.5
 | Intensity (Night)=1.5
 | Intensity (Interior)=0.4
