--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -12,7 +12,7 @@ TECHNIQUE=1
 | Enable Chromatic Aberration=true
 |  Aberration Strength=1.0
 |  Aberration Curve=1.6
-| Enable Letterbox=true
+| Enable Letterbox=false
 |  Horizontal Size=0.1
 |  Vertical Size=0.0
 |  Letterbox Rotation=0.0
@@ -35,8 +35,8 @@ TECHNIQUE=1
 |  Magenta Saturation=0.0
 | Image Luminance:=0
 |  Exposure=0.0
-|  Contrast=0.1
-|  Gamma=1.1
+|  Contrast=0.25
+|  Gamma=1.0
 |  Level Input Whitepoint=0.95
 |  Level Input Blackpoint=0.0
 |  Level Output Whitepoint=1.1
