--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -12,7 +12,7 @@ TECHNIQUE=1
 | Enable Chromatic Aberration=true
 |  Aberration Strength=1.0
 |  Aberration Curve=1.6
-| Enable Letterbox=false
+| Enable Letterbox=true
 |  Horizontal Size=0.1
 |  Vertical Size=0.0
 |  Letterbox Rotation=0.0
@@ -26,7 +26,7 @@ TECHNIQUE=1
 |  Vibrance=0.3
 |  RGB Vibrance=1, 1, 1
 |  Global Saturation=0.8
-|  Red Saturation=0.3
+|  Red Saturation=0.15
 |  Yellow Saturation=0.05
 |  Green Saturation=0.1
 |  Aqua Saturation=0.2
@@ -69,7 +69,7 @@ TECHNIQUE=1
 |  Blue Curve Startpoint=0.05
 |  Blue Curve Lower End=0.18
 |  Blue Curve Upper End=0.8
-|  Blue Curve End Point=1.0
+|  Blue Curve End Point=1.35
 | Channel Isolation:=0
 |  Hue Selection=0.165
 |  Hue Range=0.2
